# newnormalname

./: CMakeLists.txt  main.code-workspace  test.cpp  yalkar
html/: alien_8cpp.html  alien_8hpp.html  alien_8hpp_source.html  annotated.html  block_8cpp.html  block_8hpp.html  block_8hpp_source.html  class_alien-members.html  class_alien.html  class_block-members.html  class_block.html  class_game-members.html  class_game.html  class_laser-members.html  class_laser.html  class_mystery_ship-members.html  class_mystery_ship.html  class_obstacle-members.html  class_obstacle.html  class_spaceship-members.html  class_spaceship.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  game_8cpp.html  game_8hpp.html  game_8hpp_source.html  globals.html  globals_func.html  laser_8cpp.html  laser_8hpp.html  laser_8hpp_source.html  main_8cpp.html  menudata.js  mysteryship_8cpp.html  mysteryship_8hpp.html  mysteryship_8hpp_source.html  (+6 more)
latex/: alien_8cpp.tex  alien_8hpp.tex  alien_8hpp_source.tex  annotated.tex  block_8cpp.tex  block_8hpp.tex  block_8hpp_source.tex  class_alien.tex  class_block.tex  class_game.tex  class_laser.tex  class_mystery_ship.tex  class_obstacle.tex  class_spaceship.tex  files.tex  game_8cpp.tex  game_8hpp.tex  game_8hpp_source.tex  laser_8cpp.tex  laser_8hpp.tex  laser_8hpp_source.tex  main_8cpp.tex  mysteryship_8cpp.tex  mysteryship_8hpp.tex  mysteryship_8hpp_source.tex  obstacle_8cpp.tex  obstacle_8hpp.tex  obstacle_8hpp_source.tex  refman.tex  spaceship_8cpp.tex  spaceship_8hpp.tex  (+1 more)
(+58 files in other folders)
